@@ -1,6 +1,6 @@
 
 // Styles for form views
-// using Bootstrap
+// using Bootstrap 3
 // generated by the rails_layout gem
 .authform {
   padding-top: 30px;
