@@ -1,6 +1,6 @@
 
 // Styles for form views
-// using Bootstrap
+// using Bootstrap 4
 // generated by the rails_layout gem
 .authform {
   padding-top: 30px;
@@ -8,9 +8,11 @@
   margin: 0 auto;
 }
 .authform form {
-  @extend .well;
-  @extend .well-lg;
+  @extend .card;
+  @extend .col-md-9;
   padding-bottom: 40px;
+  @extend .bg-faded;
+  @extend .small;
 }
 .authform .right {
   float: right !important;
@@ -20,7 +22,7 @@
   @extend .btn-primary;
 }
 .authform fieldset {
-  @extend .well;
+  @extend .card;
 }
 #error_explanation:not(:empty) {
   @extend .alert;
@@ -32,5 +34,5 @@
 .button-xs {
   @extend .btn;
   @extend .btn-primary;
-  @extend .btn-xs;
+  @extend .btn-sm;
 }
