@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.30"
+  VERSION = "1.0.31"
 end
